--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -9,7 +9,7 @@ body {
 	border-radius: 0;
 }
 #logo-img {
-	background: url('../images/restaurant-logo-large.png') no-repeat;
+	background: url('../images/logo.png') no-repeat;
 	width: 150px;
 	height: 150px;
 	margin: 10px 15px 0px 0px;
