--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -14,3 +14,29 @@ body {
 	height: 150px;
 	margin: 10px 15px 0px 0px;
 }
+.navbar-brand {
+	padding-top: 25px;
+}
+.navbar-brand h1 { /*restaurant-name*/
+	font-family: 'Lora', serif;
+	color: #557c3e;
+	font-size: 1.5em;
+	text-transform: uppercase;
+	font-weight: bold;
+	text-shadow: 1px 1px 1px #222;
+	margin-top: 0;
+	margin-bottom: 0;
+	line-height: .75;
+}
+.navbar-brand a:hover, .navbar-brand a:focus {
+	text-decoration: none;
+}
+.navbar-brand p { /*kosher certf line*/
+	color: #000;
+	text-transform: uppercase;
+	font-size: .7em;
+	margin-top: 5px;
+}
+.navbar-brand p span {
+	vertical-align: middle;
+}
