--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -77,7 +77,7 @@ body {
 }
 @media (min-width: 992px) and (max-width: 1199px) {
 	#logo-img {
-		background: url('images/restaurant-logo-medium.png') no-repeat;
+		background: url('../images/medium logo.png') no-repeat;
 		width: 100px;
 		height: 100px;
 		margin: 5px 5px 5px 0;
@@ -87,5 +87,26 @@ body {
 
 }
 @media (max-width: 767px) {
-
+	.navbar-brand {
+		padding-top: 10px;
+		height: 80px;
+	}
+	.navbar-brand h1 {
+		padding-top: 10px;
+		font-size: 5vw;
+	}
+	.navbar-brand p {
+		font-size: .6em;
+		margin-top: 12px;
+	}
+	.navbar-brand p img {
+		height: 20px;
+	}
+	#collapsable-nav a {
+		font-size: 1.2em;
+	}
+	#collapsable-nav a span {
+		font-size: 1em;
+		margin-right: 5px;
+	}
 }
