--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -73,7 +73,10 @@ body {
 	margin-top: -30px;
 }
 @media (min-width: 1200px) {
-
+	.jumbotron {
+		background: url('../images/jumbotron_1200.jpg') no-repeat;
+		height: 675px;
+	}
 }
 @media (min-width: 992px) and (max-width: 1199px) {
 	#logo-img {
@@ -82,6 +85,10 @@ body {
 		height: 100px;
 		margin: 5px 5px 5px 0;
 		}
+	.jumbotron {
+		background: url('../images/jumbotron_992') no-repeat;
+		height: 558px;
+	}
 }
 @media (min-width: 768px) and (max-width: 991px) {
 
@@ -118,12 +125,11 @@ body {
 		background-color: #f6b319;
 		color: #951c49;
 	}
-	.xs-deliver {
+	#xs-deliver {
 		margin-top: 5px;
 		font-size: .7em;
 		letter-spacing: .1em;
 		text-transform: uppercase;
-		text-align: center;
 	}
 	#call-btn a span {
 		margin-right: 5px;
