--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -76,6 +76,11 @@ body {
 	box-shadow: 0 0 50px #3F0C1F;
 	border: 2px solid #3F0C1F;
 }
+#menu-tile, #specials-tile, #map-tile {
+	height: 250px;
+	width: 100%;
+	
+}
 @media (min-width: 1200px) {
 	.jumbotron {
 		background: url('../images/jumbotron_1200.jpg') no-repeat;
