--- a/site/css/style2.css
+++ b/site/css/style2.css
@@ -72,6 +72,33 @@ body {
 	clear: both;
 	margin-top: -30px;
 }
+.panel-footer {
+	margin-top: 30px;
+	padding-top: 35px;
+	padding-bottom: 30px;
+	background-color: #222;
+	border-top: 0;
+}
+.panel-footer div.row {
+	margin-bottom: 35px;
+}
+#hours, #address {
+	line-height: 2;
+}
+#hours > span, #address > span {
+	font-size: 1.3em;
+}
+#address p {
+	color: #557c3e;
+	font-size: .8em;
+	line-height: 1.8;
+}
+#testimonials {
+	font-style: italic;
+}
+#testimonials p:nth-child(2) {
+	margin-top: 25px;
+}
 .container .jumbotron {
 	box-shadow: 0 0 50px #3F0C1F;
 	border: 2px solid #3F0C1F;
@@ -179,6 +206,16 @@ body {
 	#menu-tile, #specials-tile, #map-tile {
 		width: 360px;
 		margin: 0 auto 15px;
+	}
+	.panel-footer section {
+		margin-bottom: 30px;
+		text-align: center;
+	}
+	.panel-footer section:nth-child(3) {
+		margin-bottom: 0;
+	}
+	.panel-footer section hr {
+		width: 50%;
 	}
 }
 @media (max-width: 479px) {
